--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                   <div class="my-2 Jost-Medium-22px-white">
                     StackOS Audit Report
                   </div>
-                  <div class="d-flex flex-row flex-wrap flex-gap-10">
+                  <div class="d-flex flex-row flex-wrap flex-gap-10 justify-content-center">
                     <button
                       class="btn btn-outline-primary px-4 Epilogue-Black-14px-white pt-2"
                     >
@@ -444,7 +444,7 @@
                   <div class="my-2 Jost-Medium-22px-white">
                     StackOS Audit Report
                   </div>
-                  <div class="d-flex flex-row flex-wrap flex-gap-10">
+                  <div class="d-flex flex-row flex-wrap flex-gap-10 justify-content-center">
                     <button
                       class="btn btn-outline-primary px-4 Epilogue-Black-14px-white pt-2"
                     >
@@ -469,7 +469,7 @@
                   <div class="my-2 Jost-Medium-22px-white">
                     StackOS Audit Report
                   </div>
-                  <div class="d-flex flex-row flex-wrap flex-gap-10">
+                  <div class="d-flex flex-row flex-wrap flex-gap-10 justify-content-center">
                     <button
                       class="btn btn-outline-primary px-4 Epilogue-Black-14px-white pt-2"
                     >
@@ -508,7 +508,71 @@
             role="tabpanel"
             aria-labelledby="pills-binance-tab"
             tabindex="1"
-          ></div>
+          >
+                    <!-- carosel start -->
+                    <div
+                    class="container-fluid my-4 d-flex flex-row align-items-center flex-gap-40"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="30"
+                      height="30"
+                      fill="white"
+                      class="bi bi-chevron-left"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
+                      />
+                    </svg>
+                    <div
+                      class="d-flex flex-row justify-contents-around w-100 flex-gap-40 flex-wrap mx-3 p-3"
+                    >
+                      <div
+                        class="d-flex flex-column justify-contents-center flex-gap-10"
+                      >
+                        <img
+                          src="./Assets/slider-img-book-removebg-preview.png"
+                          alt=""
+                          class="ms-5"
+                          style="width: 7rem; height: 10rem"
+                        />
+                        <div class="my-2 Jost-Medium-22px-white">
+                          StackOS Audit Report
+                        </div>
+                        <div class="d-flex flex-row flex-wrap flex-gap-10 justify-content-center">
+                          <button
+                            class="btn btn-outline-primary px-4 Epilogue-Black-14px-white pt-2"
+                          >
+                            VIEW
+                          </button>
+                          <button
+                            class="btn btn-outline-primary px-4 Epilogue-Black-14px-white pt-2"
+                          >
+                            DOWNLOAD
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="30"
+                      height="30"
+                      fill="white"
+                      class="bi bi-chevron-right"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
+                      />
+                    </svg>
+                  </div>
+      
+                  <!-- carosel end -->
+        
+        </div>
           <div
             class="tab-pane fade"
             id="pills-nft"
